hphp/hack/test/typecheck/array_map5.php.exp
File "array_map5.php", line 4, characters 17-18:
Invalid argument (Typing[4110])
File "builtins.hhi", line 55, characters 10-18:
This is an object of type Container
File "array_map5.php", line 3, characters 15-35:
It is incompatible with a function
