hphp/hack/test/typecheck/array_map5.php
<?hh

function test((function(int): bool) $f): void {
  array_map($f, $f);
}
